<resources>
    <string name="app_name">CatalogFever</string>
    <string name="textview_homepage">Catalog Fever</string>
    <string name="btn_view_list">View list</string>
    <string name="btn_Add_remove">Add or remove product</string>
    <string name="tv_l1">Catalog</string>
    <string name="tv_list">Listado</string>
    <string name="btn_save">save</string>
    <string name="btn_home">back</string>
    <string name="txt_view_product">Add / remove product</string>
    <string name="et_item">Product</string>
    <string name="et_number">Number</string>
    <string name="rb_add">add</string>
    <string name="rb_remove">remove</string>
    <string name="btn_save_changes">Send</string>
    <string name="btn_view_list_product">View List</string>


</resources>